# ethertype-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  codegen.py  tombi.toml
.github/workflows/: autoupdate.yml  ci.yml
src/: consts.rs  desc.rs  error.rs  iana.rs  ieee.rs  lib.rs  serde.rs
