[package]
name = "ethertype"
version = "0.2.1"
edition = "2021"
authors = ["Wojciech Graj <wojtek.graj.2004@gmail.com>"]
rust-version = "1.56.0"

description = "IEEE 802 EtherType with protocol descriptions"
license = "MIT"
readme = "README.md"
repository = "https://github.com/wojciech-graj/ethertype-rs"
documentation = "https://docs.rs/ethertype"
keywords = ["ethertype", "ethernet", "ieee", "iana"]
include = ["**/*.rs", "Cargo.toml", "LICENSE", "README.md"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["desc", "std"]
desc = []
iana = []
ieee = []
serde = ["serde_cr"]
std = []

[dependencies]
serde_cr = { package = "serde", version = "1.0.210", default-features = false, optional = true }  # version 1.0.211 drops rust 1.56.0 compatibility

[dev-dependencies]
serde_test = { version = "1.0.177" }
