[package]
name = "ethertype"
version = "0.3.3"
edition = "2021"
authors = ["Wojciech Graj <me@w-graj.net>"]
rust-version = "1.56.0"

description = "IEEE 802 EtherType with protocol descriptions"
license = "MIT"
readme = "README.md"
repository = "https://github.com/wojciech-graj/ethertype-rs"
documentation = "https://docs.rs/ethertype"
keywords = ["ethertype", "ethernet", "ieee", "iana"]
include = ["**/*.rs", "Cargo.toml", "LICENSE", "README.md"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["desc", "std"]
desc = []
iana = []
ieee = []
serde = ["serde_cr"]
std = []

[dependencies]
serde_cr = { package = "serde", version = "1.0", default-features = false, optional = true }

[dev-dependencies]
serde_test = "1.0"
