[package]
name = "ethertype"
version = "0.3.4"
edition = "2021"
rust-version = "1.56.0"

description = "IEEE 802 EtherType with protocol descriptions"
documentation = "https://docs.rs/ethertype"
readme = "README.md"
repository = "https://github.com/wojciech-graj/ethertype-rs"
license = "MIT"
keywords = ["ethernet", "ethertype", "iana", "ieee"]
include = ["**/*.rs", "Cargo.toml", "LICENSE", "README.md"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde_cr = { package = "serde", version = "1.0", default-features = false, optional = true }

[dev-dependencies]
serde_test = "1.0"

[features]
default = ["desc", "std"]
desc = []
iana = []
ieee = []
serde = ["serde_cr"]
std = []
